ignition-cmake 0.6.0-1 release

--- a/debian/stretch/debian/changelog
+++ b/debian/stretch/debian/changelog
@@ -1,3 +1,9 @@
+ignition-cmake (0.6.0-1~stretch) stretch; urgency=medium
+
+  * ignition-cmake 0.6.0-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Tue, 01 May 2018 17:03:57 -0700
+
 ignition-cmake (0.4.1-2~stretch) stretch; urgency=medium
 
   * ignition-cmake 0.4.1-2 release
