--- a/debian/sid/debian/changelog
+++ b/debian/sid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-cmake (0.6.0-1~sid) sid; urgency=medium
+
+  * ignition-cmake 0.6.0-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Tue, 01 May 2018 17:03:57 -0700
+
 ignition-cmake (0.5.0-1~sid) sid; urgency=medium
 
   * ignition-cmake 0.5.0-1 release
