--- a/debian/sid/debian/changelog
+++ b/debian/sid/debian/changelog
@@ -1,3 +1,9 @@
+ignition-cmake (0.6.1-1~sid) sid; urgency=medium
+
+  * ignition-cmake 0.6.1-1 release
+
+ -- Steve Peters <scpeters@osrfoundation.org>  Wed, 17 Oct 2018 09:58:34 -0700
+
 ignition-cmake (0.6.0-1~sid) sid; urgency=medium
 
   * ignition-cmake 0.6.0-1 release
